v0.0.1/modules/schema/pages/class/TransformerObservation.adoc
= `TransformerObservation`
:toclevels: 4


+++Common information captured during transformer inspections and/or diagnostics. Note that some properties may be measured through other means and therefore have measurement values in addition to the observed values recorded here.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerObservation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransformerObservation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransformerObservation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}









Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





TransformerTank {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindingInsulation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Reconditioning {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProcedureDataSet {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



BushingInsulationPF {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







TransformerObservation -> Status: status



TransformerObservation -> TransformerTank: Transformer


TransformerObservation -> WindingInsulation: WindingInsulationPFs


TransformerObservation -> Reconditioning: Reconditioning


TransformerObservation -> ProcedureDataSet: ProcedureDataSets


TransformerObservation -> BushingInsulationPF: BushingInsultationPFs


TransformerObservation -> DiagramObject: DiagramObjects


TransformerObservation -> InstanceSet: InstanceSet


TransformerObservation -> Name: Names


TransformerObservation -> ChangeSetMember: PropertiesCIMDataObject


TransformerObservation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<Reconditioning,`Reconditioning`>>
| 1
| xref::class/Reconditioning.adoc[`Reconditioning`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Transformer,`Transformer`>>
| 0..1
| xref::class/TransformerTank.adoc[`TransformerTank`]
| n/a

| <<bushingTemp,`bushingTemp`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Bushing temperature.+++

| <<dga,`dga`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Dissolved Gas Analysis. Typical values are: Acceptable, Overheating, Corona, Sparking, Arcing.+++

| <<freqResp,`freqResp`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Frequency Response Analysis. Typical values are: acceptable, slight movement, significant movement, failed, near failure. A graphic of the response diagram, which is a type of document, may be associated with this analysis through the recursive document relationship of the ProcedureDataSet.+++

| <<furfuralDP,`furfuralDP`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Overall measure of furfural in oil and mechanical strength of paper. DP, the degree of polymerization, is the strength of the paper. Furfural is a measure of furfural compounds, often expressed in parts per million.+++

| <<hotSpotTemp,`hotSpotTemp`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Hotspot oil temperature.+++

| <<oilColor,`oilColor`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis-Color.+++

| <<oilDielectricStrength,`oilDielectricStrength`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Oil Quality Analysis-Dielectric Strength.+++

| <<oilIFT,`oilIFT`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis- inter facial tension (IFT) - number-Dynes/CM.+++

| <<oilLevel,`oilLevel`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The level of oil in the transformer.+++

| <<oilNeutralizationNumber,`oilNeutralizationNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis-Neutralization Number - Number - Mg KOH.+++

| <<pumpVibration,`pumpVibration`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Pump vibration, with typical values being: nominal, high.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<topOilTemp,`topOilTemp`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Top oil temperature.+++

| <<waterContent,`waterContent`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Water Content expressed in parts per million.+++

| <<BushingInsultationPFs,`BushingInsultationPFs`>>
| 0..*
| xref::class/BushingInsulationPF.adoc[`BushingInsulationPF`]
| n/a

| <<ProcedureDataSets,`ProcedureDataSets`>>
| 0..*
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| n/a

| <<WindingInsulationPFs,`WindingInsulationPFs`>>
| 0..*
| xref::class/WindingInsulation.adoc[`WindingInsulation`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BushingInsultationPFs]
=== `BushingInsultationPFs`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.BushingInsultationPFs`
| Cardinality
| 0..*
| Type
| xref::class/BushingInsulationPF.adoc[`BushingInsulationPF`]


|===

//[discrete]
[#bushingTemp]
=== `bushingTemp`
+++Bushing temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.bushingTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dga]
=== `dga`
+++Dissolved Gas Analysis. Typical values are: Acceptable, Overheating, Corona, Sparking, Arcing.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.dga`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#freqResp]
=== `freqResp`
+++Frequency Response Analysis. Typical values are: acceptable, slight movement, significant movement, failed, near failure. A graphic of the response diagram, which is a type of document, may be associated with this analysis through the recursive document relationship of the ProcedureDataSet.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.freqResp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#furfuralDP]
=== `furfuralDP`
+++Overall measure of furfural in oil and mechanical strength of paper. DP, the degree of polymerization, is the strength of the paper. Furfural is a measure of furfural compounds, often expressed in parts per million.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.furfuralDP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#hotSpotTemp]
=== `hotSpotTemp`
+++Hotspot oil temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.hotSpotTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#oilColor]
=== `oilColor`
+++Oil Quality Analysis-Color.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilColor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#oilDielectricStrength]
=== `oilDielectricStrength`
+++Oil Quality Analysis-Dielectric Strength.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilDielectricStrength`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#oilIFT]
=== `oilIFT`
+++Oil Quality Analysis- inter facial tension (IFT) - number-Dynes/CM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilIFT`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#oilLevel]
=== `oilLevel`
+++The level of oil in the transformer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilLevel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#oilNeutralizationNumber]
=== `oilNeutralizationNumber`
+++Oil Quality Analysis-Neutralization Number - Number - Mg KOH.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilNeutralizationNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#ProcedureDataSets]
=== `ProcedureDataSets`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.ProcedureDataSets`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pumpVibration]
=== `pumpVibration`
+++Pump vibration, with typical values being: nominal, high.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.pumpVibration`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Reconditioning]
=== `Reconditioning`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.Reconditioning`
| Cardinality
| 1
| Type
| xref::class/Reconditioning.adoc[`Reconditioning`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#topOilTemp]
=== `topOilTemp`
+++Top oil temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.topOilTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#Transformer]
=== `Transformer`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.Transformer`
| Cardinality
| 0..1
| Type
| xref::class/TransformerTank.adoc[`TransformerTank`]


|===

//[discrete]
[#waterContent]
=== `waterContent`
+++Water Content expressed in parts per million.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.waterContent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#WindingInsulationPFs]
=== `WindingInsulationPFs`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.WindingInsulationPFs`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===


