v1.1.0/modules/schema/pages/class/TransformerObservation.adoc
= `TransformerObservation`
:toclevels: 4


+++Common information captured during transformer inspections and/or diagnostics. Note that some properties may be measured through other means and therefore have measurement values in addition to the observed values recorded here.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerObservation`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransformerObservation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BushingInsultationPFs,`BushingInsultationPFs`>>
//| [[slots_table.BushingInsultationPFs]]<<BushingInsultationPFs,`BushingInsultationPFs`>>
| 0..* +
xref::class/BushingInsulationPF.adoc[`BushingInsulationPF`]
| _n/a_
| _n/a_

| <<ProcedureDataSets,`ProcedureDataSets`>>
//| [[slots_table.ProcedureDataSets]]<<ProcedureDataSets,`ProcedureDataSets`>>
| 0..* +
xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| _n/a_
| _n/a_

| <<Reconditioning,`Reconditioning`>>
//| [[slots_table.Reconditioning]]<<Reconditioning,`Reconditioning`>>
| 1 +
xref::class/Reconditioning.adoc[`Reconditioning`]
| _n/a_
| _n/a_

| <<Transformer,`Transformer`>>
//| [[slots_table.Transformer]]<<Transformer,`Transformer`>>
| 0..1 +
xref::class/TransformerTank.adoc[`TransformerTank`]
| _n/a_
| _n/a_

| <<WindingInsulationPFs,`WindingInsulationPFs`>>
//| [[slots_table.WindingInsulationPFs]]<<WindingInsulationPFs,`WindingInsulationPFs`>>
| 0..* +
xref::class/WindingInsulation.adoc[`WindingInsulation`]
| _n/a_
| _n/a_

| <<bushingTemp,`bushingTemp`>>
//| [[slots_table.bushingTemp]]<<bushingTemp,`bushingTemp`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Bushing temperature.+++
| _n/a_

| <<dga,`dga`>>
//| [[slots_table.dga]]<<dga,`dga`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Dissolved Gas Analysis. Typical values are: Acceptable, Overheating, Corona, Sparking, Arcing.+++
| _n/a_

| <<freqResp,`freqResp`>>
//| [[slots_table.freqResp]]<<freqResp,`freqResp`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Frequency Response Analysis. Typical values are: acceptable, slight movement, significant movement, failed, near failure. A...+++
| _n/a_

| <<furfuralDP,`furfuralDP`>>
//| [[slots_table.furfuralDP]]<<furfuralDP,`furfuralDP`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Overall measure of furfural in oil and mechanical strength of paper. DP, the degree of polymerization, is the strength of...+++
| _n/a_

| <<hotSpotTemp,`hotSpotTemp`>>
//| [[slots_table.hotSpotTemp]]<<hotSpotTemp,`hotSpotTemp`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Hotspot oil temperature.+++
| _n/a_

| <<oilColor,`oilColor`>>
//| [[slots_table.oilColor]]<<oilColor,`oilColor`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis-Color.+++
| _n/a_

| <<oilDielectricStrength,`oilDielectricStrength`>>
//| [[slots_table.oilDielectricStrength]]<<oilDielectricStrength,`oilDielectricStrength`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Oil Quality Analysis-Dielectric Strength.+++
| _n/a_

| <<oilIFT,`oilIFT`>>
//| [[slots_table.oilIFT]]<<oilIFT,`oilIFT`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis- inter facial tension (IFT) - number-Dynes/CM.+++
| _n/a_

| <<oilLevel,`oilLevel`>>
//| [[slots_table.oilLevel]]<<oilLevel,`oilLevel`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The level of oil in the transformer.+++
| _n/a_

| <<oilNeutralizationNumber,`oilNeutralizationNumber`>>
//| [[slots_table.oilNeutralizationNumber]]<<oilNeutralizationNumber,`oilNeutralizationNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Oil Quality Analysis-Neutralization Number - Number - Mg KOH.+++
| _n/a_

| <<pumpVibration,`pumpVibration`>>
//| [[slots_table.pumpVibration]]<<pumpVibration,`pumpVibration`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Pump vibration, with typical values being: nominal, high.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<topOilTemp,`topOilTemp`>>
//| [[slots_table.topOilTemp]]<<topOilTemp,`topOilTemp`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Top oil temperature.+++
| _n/a_

| <<waterContent,`waterContent`>>
//| [[slots_table.waterContent]]<<waterContent,`waterContent`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Water Content expressed in parts per million.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BushingInsultationPFs]
=== `BushingInsultationPFs`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.BushingInsultationPFs`
| Cardinality
| 0..*
| Type
| xref::class/BushingInsulationPF.adoc[`BushingInsulationPF`]


|===

////
[.text-left]
--
<<slots_table.BushingInsultationPFs,&#10548;>>
--
////


//[discrete]
[#bushingTemp]
=== `bushingTemp`
+++Bushing temperature.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.bushingTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.bushingTemp,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#dga]
=== `dga`
+++Dissolved Gas Analysis. Typical values are: Acceptable, Overheating, Corona, Sparking, Arcing.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.dga`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.dga,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#freqResp]
=== `freqResp`
+++Frequency Response Analysis. Typical values are: acceptable, slight movement, significant movement, failed, near failure. A graphic of the response diagram, which is a type of document, may be associated with this analysis through the recursive document relationship of the ProcedureDataSet.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.freqResp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.freqResp,&#10548;>>
--
////


//[discrete]
[#furfuralDP]
=== `furfuralDP`
+++Overall measure of furfural in oil and mechanical strength of paper. DP, the degree of polymerization, is the strength of the paper. Furfural is a measure of furfural compounds, often expressed in parts per million.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.furfuralDP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.furfuralDP,&#10548;>>
--
////


//[discrete]
[#hotSpotTemp]
=== `hotSpotTemp`
+++Hotspot oil temperature.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.hotSpotTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.hotSpotTemp,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#oilColor]
=== `oilColor`
+++Oil Quality Analysis-Color.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilColor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.oilColor,&#10548;>>
--
////


//[discrete]
[#oilDielectricStrength]
=== `oilDielectricStrength`
+++Oil Quality Analysis-Dielectric Strength.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilDielectricStrength`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.oilDielectricStrength,&#10548;>>
--
////


//[discrete]
[#oilIFT]
=== `oilIFT`
+++Oil Quality Analysis- inter facial tension (IFT) - number-Dynes/CM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilIFT`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.oilIFT,&#10548;>>
--
////


//[discrete]
[#oilLevel]
=== `oilLevel`
+++The level of oil in the transformer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilLevel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.oilLevel,&#10548;>>
--
////


//[discrete]
[#oilNeutralizationNumber]
=== `oilNeutralizationNumber`
+++Oil Quality Analysis-Neutralization Number - Number - Mg KOH.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.oilNeutralizationNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.oilNeutralizationNumber,&#10548;>>
--
////


//[discrete]
[#ProcedureDataSets]
=== `ProcedureDataSets`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.ProcedureDataSets`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]


|===

////
[.text-left]
--
<<slots_table.ProcedureDataSets,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#pumpVibration]
=== `pumpVibration`
+++Pump vibration, with typical values being: nominal, high.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.pumpVibration`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.pumpVibration,&#10548;>>
--
////


//[discrete]
[#Reconditioning]
=== `Reconditioning`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.Reconditioning`
| Cardinality
| 1
| Type
| xref::class/Reconditioning.adoc[`Reconditioning`]


|===

////
[.text-left]
--
<<slots_table.Reconditioning,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#topOilTemp]
=== `topOilTemp`
+++Top oil temperature.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.topOilTemp`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.topOilTemp,&#10548;>>
--
////


//[discrete]
[#Transformer]
=== `Transformer`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.Transformer`
| Cardinality
| 0..1
| Type
| xref::class/TransformerTank.adoc[`TransformerTank`]


|===

////
[.text-left]
--
<<slots_table.Transformer,&#10548;>>
--
////


//[discrete]
[#waterContent]
=== `waterContent`
+++Water Content expressed in parts per million.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.waterContent`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.waterContent,&#10548;>>
--
////


//[discrete]
[#WindingInsulationPFs]
=== `WindingInsulationPFs`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerObservation.WindingInsulationPFs`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===

////
[.text-left]
--
<<slots_table.WindingInsulationPFs,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BushingInsulationPF.adoc[`BushingInsulationPF`] | xref::class/BushingInsulationPF.adoc#TransformerObservation[`TransformerObservation`]



| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`] | xref::class/ProcedureDataSet.adoc#TransformerObservations[`TransformerObservations`]



| xref::class/Reconditioning.adoc[`Reconditioning`] | xref::class/Reconditioning.adoc#TransformerObservations[`TransformerObservations`]



| xref::class/TransformerTank.adoc[`TransformerTank`] | xref::class/TransformerTank.adoc#TransformerObservations[`TransformerObservations`]



| xref::class/WindingInsulation.adoc[`WindingInsulation`] | xref::class/WindingInsulation.adoc#TransformerObservation[`TransformerObservation`]


|===

